# hfcx-ai-claims

./: .env.example  .gitignore  Dockerfile  Dockerfile.base  README.md  alembic.ini  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: build-base-image.yml  ci.yml  deploy-digitalocean.yml
config/: keycloak-realm.json  litellm_config.yaml  prometheus.yml
deploy/digitalocean/: README.md  provision.sh  teardown.sh
deploy/digitalocean/k8s/: backend.yaml  frontend.yaml  ingress.yaml  keycloak.yaml  services.yaml  supporting-services.yaml
docs/: DEVOPS-GUIDE.md  SRS-HealthFlow-HCX-AI-v2.0-Enhanced.docx  SRS-HealthFlow-HCX-AI-v2.0-Enhanced.md  SRS-HealthFlow-HCX-Frontend-Portals-v1.0.docx  research.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  i18n.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.mts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/access-denied/: page.tsx
frontend/app/api/auth/callback/: route.ts
frontend/app/api/proxy/[...path]/: route.ts
frontend/app/payer/: layout.tsx  page.tsx
frontend/app/payer/analytics/: page.tsx
frontend/app/payer/claims/: page.tsx
frontend/app/payer/communications/: page.tsx
frontend/app/payer/fraud/: page.tsx
frontend/app/payer/preauth/: page.tsx
frontend/app/payer/settings/: page.tsx
frontend/app/payer/settled/: page.tsx
frontend/app/provider/: layout.tsx  page.tsx
frontend/app/provider/claims/: page.tsx
frontend/app/provider/claims/new/: page.tsx
frontend/app/provider/communications/: page.tsx
frontend/app/provider/denials/: page.tsx
frontend/app/provider/eligibility/: page.tsx
frontend/app/provider/payments/: page.tsx
frontend/app/provider/preauth/: page.tsx
frontend/app/provider/settings/: page.tsx
frontend/app/regulatory/: layout.tsx  page.tsx
frontend/app/regulatory/compliance/: page.tsx
frontend/app/regulatory/fraud/: page.tsx
frontend/app/regulatory/geographic/: page.tsx
frontend/app/regulatory/insurers/: page.tsx
frontend/app/regulatory/reports/: page.tsx
frontend/app/siu/: layout.tsx  page.tsx
frontend/app/siu/flagged/: page.tsx
frontend/app/siu/investigations/: page.tsx
frontend/app/siu/network/: page.tsx
frontend/app/siu/reports/: page.tsx
frontend/app/siu/search/: page.tsx
frontend/components/: providers.tsx
frontend/components/layout/: portal-shell.tsx
frontend/components/shared/: ai-recommendation-card.tsx  claim-card.tsx  claim-status-badge.tsx  claim-timeline.tsx  code-selector.tsx  coming-soon.tsx  confidence-bar.tsx  data-table.tsx  document-upload.tsx  fraud-gauge.tsx  governorate-map.tsx  icd10-selector.tsx  kpi-card.tsx  language-toggle.tsx  network-graph.tsx  patient-nid-input.tsx  report-generator.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  progress.tsx  separator.tsx  tabs.tsx  toast.tsx
frontend/e2e/: portal-selector.spec.ts
frontend/hooks/: use-claim-updates.ts  use-toast.ts
frontend/lib/: api.ts  session.ts  types.ts  use-claim-sse.ts  utils.ts
frontend/messages/: ar.json  en.json
frontend/tests/: api.test.ts  claim-status-badge.test.tsx  confidence-bar.test.tsx  fraud-gauge.test.tsx  patient-nid-input.test.tsx  setup.ts  test-utils.tsx  utils.test.ts
k8s/: frontend.yaml  manifests.yaml  ollama.yaml
migrations/: README.md  init.sql
migrations/alembic/: env.py
migrations/alembic/versions/: 20260409_0001_baseline.py  20260409_0002_pg_partman_setup.py  20260409_0003_claim_metadata_columns.py
models/: xgb_fraud_v1.json  xgb_fraud_v1_metrics.json
scripts/: generate_test_claims.py  seed_chromadb.py  train_xgboost_fraud.py
src/: __init__.py  config.py  main.py
src/agents/: coordinator.py  eligibility.py  fraud_detection.py  medical_coding.py  medical_necessity.py  multimodal.py
src/api/: middleware.py
src/api/routes/: _coding_helpers.py  agents.py  bff.py  coordinator.py  documents.py  feedback.py  health.py  llm.py  memory.py  sse.py
src/data/: __init__.py
src/kafka/: consumer.py
src/models/: orm.py  schemas.py
src/services/: arabic_nlp_service.py  audit_service.py  chromadb_seeder.py  circuit_breaker.py  claim_analysis_writer.py  code_search_service.py  drift_service.py  hapi_fhir_service.py  healthcare_nlp_service.py  llm_service.py  model_store.py  ndp_service.py  redis_service.py
src/utils/: fhir_parser.py  logging.py  metrics.py  phi_redactor.py
tests/: conftest.py
tests/integration/: conftest.py  test_postgres_audit.py  test_redis_roundtrip.py
tests/load/: README.md  agents_fraud_direct.js  coordinate_burst.js  coordinate_sustained.js
tests/postman/: README.md  hfcx-ai-claims.postman_collection.json
tests/test_agents/: test_adjudicate.py  test_agents.py  test_coordinator_process.py  test_eligibility.py  test_multimodal.py  test_necessity.py
tests/test_api/: test_api.py  test_bff.py  test_bff_audit_fixes.py  test_bff_extended.py  test_coordinator_route.py  test_documents_extended.py  test_documents_route.py  test_feedback_route.py  test_memory_route.py  test_middleware.py  test_new_features.py  test_sse_extended.py  test_sse_route.py
tests/test_api/test_api/: test_sse_route.py
tests/test_kafka/: test_consumer.py  test_extensions.py
tests/test_services/: test_arabic_nlp.py  test_audit_batcher.py  test_chromadb_seeder.py  test_circuit_breaker.py  test_claim_analysis_writer.py  test_code_search.py  test_coding_helpers.py  test_drift.py  test_hapi_fhir.py  test_healthcare_nlp.py  test_llm.py  test_memory.py  test_model_store.py  test_model_store_extended.py  test_ndp.py  test_redis.py  test_redis_extended.py
