[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfcx-ai-claims"
version = "1.0.0"
description = "AI-Powered Claims Processing Layer for HealthFlow HCX Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",

    # LangGraph / LangChain (agent orchestration) — SRS 2.1 requires LangGraph 0.6.7+
    "langgraph==0.6.7",
    "langgraph-checkpoint==2.1.0",
    "langgraph-checkpoint-redis==0.1.1",
    "langchain==0.3.25",
    "langchain-core==0.3.59",
    "langchain-community==0.3.24",

    # LiteLLM (unified LLM gateway)
    "litellm==1.51.1",

    # Kafka
    "aiokafka==0.11.0",
    "confluent-kafka==2.5.3",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.10",

    # Redis (redis-py 4.2+ has native asyncio — aioredis is deprecated/merged)
    "redis[hiredis]==5.1.1",

    # FHIR
    "fhir.resources==8.0.0",

    # Vector store (RAG)
    "chromadb==0.5.18",
    "sentence-transformers==3.2.1",

    # Healthcare ML / NLP
    "pyhealth==1.1.5",
    "scikit-learn==1.5.2",
    "xgboost==2.1.2",
    "pyod==2.0.2",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",

    # Auth / Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.3",

    # Observability
    "opentelemetry-sdk==1.27.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
    "opentelemetry-instrumentation-aiokafka==0.48b0",
    "opentelemetry-exporter-otlp==1.27.0",
    "prometheus-client==0.21.0",

    # Logging
    "structlog==24.4.0",

    # Config
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",

    # Utilities
    "tenacity==9.0.0",
    "cachetools==5.5.0",
    "faker==30.8.2",
    "mimesis==18.0.0",
    # Note: circuit breaker is a native asyncio implementation — no pybreaker.
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "testcontainers==4.8.1",
    "httpx==0.27.2",
    "ruff==0.7.1",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
# Pragmatic: full strict is aspirational, but CI runs with --no-strict-optional.
# Keep this in sync with .github/workflows/ci.yml
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests require Docker (testcontainers). Default `pytest tests/`
# skips them via --ignore; CI runs them in a dedicated integration job.
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 --ignore=tests/integration --ignore=tests/load --ignore=tests/postman"
markers = [
    "integration: tests that require Docker via testcontainers (opt-in)",
]
