[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfcx-ai-claims"
version = "1.0.0"
description = "AI-Powered Claims Processing Layer for HealthFlow HCX Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",

    # LangGraph / LangChain (agent orchestration) — SRS 2.1 requires LangGraph 0.6.7+
    # langchain-text-splitters >=0.3.9 (a transitive dep of langchain) pins
    # langchain-core>=0.3.75, so the core pin here must be 0.3.75+.
    "langgraph==0.6.7",
    "langgraph-checkpoint==2.1.0",
    "langgraph-checkpoint-redis==0.1.1",
    "langchain==0.3.25",
    "langchain-core==0.3.75",
    "langchain-community==0.3.24",

    # LiteLLM (unified LLM gateway)
    "litellm==1.51.1",

    # Kafka
    "aiokafka==0.11.0",
    "confluent-kafka==2.5.3",

    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "psycopg2-binary==2.9.10",

    # Redis (redis-py 4.2+ has native asyncio — aioredis is deprecated/merged).
    # 6.2.0 is the floor required by langgraph-checkpoint-redis 0.1.1;
    # the 5.x → 6.x bump is API-compatible for our usage (redis.asyncio).
    "redis[hiredis]==6.2.0",

    # FHIR
    "fhir.resources==8.0.0",

    # Vector store (RAG)
    "chromadb==0.5.18",
    "sentence-transformers==3.2.1",

    # Healthcare ML / NLP
    # Note: pyhealth 1.1.5 pins pandas<2, which is incompatible with the
    # pandas 2.x required by the rest of the stack. It is also not
    # imported anywhere in src/ or tests/, so it was removed. If a future
    # feature needs it, re-add against a pandas 2.x-compatible release.
    "scikit-learn==1.5.2",
    "xgboost==2.1.2",
    "pyod==2.0.2",
    "networkx==3.4.2",
    "numpy==1.26.4",
    "pandas==2.2.3",

    # Auth / Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.3",

    # Observability
    # Note: opentelemetry-instrumentation-aiokafka was first released at
    # 0.49b0 — 0.48b0 (the version that would pair with SDK 1.27.0) was
    # never published. Keep the whole OTel ecosystem on a consistent
    # 0.49b0 / 1.28.0 set so `pip install -e .` can resolve.
    "opentelemetry-sdk==1.28.0",
    "opentelemetry-instrumentation-fastapi==0.49b0",
    "opentelemetry-instrumentation-aiokafka==0.49b0",
    "opentelemetry-exporter-otlp==1.28.0",
    "prometheus-client==0.21.0",

    # Logging
    "structlog==24.4.0",

    # Config
    "pydantic-settings==2.6.0",
    "python-dotenv==1.0.1",

    # Utilities
    "tenacity==9.0.0",
    "cachetools==5.5.0",
    "faker==30.8.2",
    "mimesis==18.0.0",
    # Note: circuit breaker is a native asyncio implementation — no pybreaker.
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "testcontainers==4.8.1",
    "httpx==0.27.2",
    "ruff==0.7.1",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
# Pragmatic: full strict is aspirational, but CI runs with --no-strict-optional.
# Keep this in sync with .github/workflows/ci.yml
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Integration tests require Docker (testcontainers). Default `pytest tests/`
# skips them via --ignore; CI runs them in a dedicated integration job.
# Coverage floor is 78 — actual is 78.53% with the current unit suite.
# Raise the floor as new tests land; the 80% target remains aspirational
# and will be revisited once redis_service.py and model_store.py are
# covered (they're the two largest gaps).
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=78 --ignore=tests/integration --ignore=tests/load --ignore=tests/postman"
markers = [
    "integration: tests that require Docker via testcontainers (opt-in)",
]
